Increase min-height to 480px to prevent cutoff

--- a/server/static/css/jquery.steps.css
+++ b/server/static/css/jquery.steps.css
@@ -44,7 +44,7 @@
     display: block;
     margin: .5em;
     width: 95%;
-    min-height: 400px;
+    min-height: 480px;
     position: relative;
     border-radius: 5px
 }
